--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+git clone https://github.com/gkojax/dotfiles
 cd dotfiles
-ln -s dotfiles/.zshrc ~/.
-ln -s dotfiles/.screenrc ~/.
+git submodule update --init dircolors-solarized zsh-completions zsh-syntax-highlighting
+ 
+ln -s ~/dotfiles/.zshrc ~/.
+ln -s ~/dotfiles/.screenrc ~/.
+
